name:               bztest2
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  hs-source-dirs:   src/
  main-is:          Site.hs
  build-depends:    base == 4.*
                  , hakyll == 4.16.*
                  , pandoc >=3.0 && <3.2
                  , pandoc-types >=1.23.1 && <1.24
  ghc-options:      -threaded -rtsopts -with-rtsopts=-N
  default-language: Haskell2010
